# blitzy-c-compiler

./: .gitignore  Cargo.toml  README.md  build.rs  catalog-info.yaml  mkdocs.yml
.github/workflows/: ci.yml  validation.yml
blitzy/documentation/: Project Guide.md  Technical Specifications.md
docs/: architecture.md  cli.md  index.md  targets.md  technical-specifications.md
docs/internals/: dwarf.md  ir.md  linker.md
include/: float.h  iso646.h  limits.h  stdalign.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  stdnoreturn.h
src/: main.rs
src/codegen/: mod.rs  regalloc.rs
src/codegen/aarch64/: abi.rs  encoding.rs  (+2 more)
src/common/: arena.rs  diagnostics.rs  intern.rs  mod.rs  numeric.rs  source_map.rs
src/debug/: dwarf.rs  frame.rs  info.rs  line_program.rs  mod.rs
src/driver/: cli.rs  mod.rs  pipeline.rs  target.rs
src/frontend/: mod.rs
src/ir/: builder.rs  cfg.rs  instructions.rs  mod.rs  ssa.rs  types.rs
src/linker/: archive.rs  dynamic.rs  elf.rs  mod.rs  relocations.rs  script.rs  sections.rs  symbols.rs
src/passes/: constant_fold.rs  cse.rs  dce.rs  mem2reg.rs  mod.rs  pipeline.rs  simplify.rs
src/sema/: mod.rs  scope.rs  storage.rs  symbol_table.rs  type_check.rs  type_conversion.rs  types.rs
tests/: cli.rs  codegen_aarch64.rs  codegen_i686.rs  codegen_riscv64.rs  codegen_x86_64.rs  dwarf.rs  hello_world.rs  lexing.rs  linking.rs  multiarch.rs  optimization.rs  parsing.rs  preprocessing.rs  security.rs  semantic.rs  validation.rs
tests/common/: mod.rs
tests/validation/: linux.rs  lua.rs  mod.rs  redis.rs  sqlite.rs  zlib.rs
(+31 files in other folders)
